#
# Copyright (c) 2014-2016 Triad National Security, LLC
#                         All rights reserved.
#
# This file is part of the Gladius project. See the LICENSE.txt file at the
# top-level directory of this distribution.
#

LIBVINFO = "1:0:0"

lib_LTLIBRARIES = \
libGladiusUI.la

libGladiusUI_la_SOURCES = \
ui-factory.h \
ui.h

libGladiusUI_la_CFLAGS =

libGladiusUI_la_CPPFLAGS = \
-I$(top_srcdir)/source

libGladiusUI_la_LDFLAGS = \
-version-info ${LIBVINFO}

libGladiusUI_la_LIBADD =
